<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/get_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center"
        android:text="@string/get_token" />

    <Button
        android:id="@+id/get_icd_codes_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/get_icd_codes_1"
        android:layout_marginHorizontal="20dp" />

    <Button
        android:id="@+id/get_icd_codes_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/get_icd_codes_2"
        android:layout_marginHorizontal="20dp" />

    <Button
        android:id="@+id/get_icd_codes_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/get_icd_codes_3"
        android:layout_marginHorizontal="20dp" />

    <Button
        android:id="@+id/get_icd_codes_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/get_icd_codes_4"
        android:layout_marginHorizontal="20dp" />

</LinearLayout>